--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,35 +18,31 @@ android {
         }
     }
 
-    packagingOptions {
-        pickFirst 'lib/x86_64/libNativeImageProcessor.so'
-        pickFirst 'lib/armeabi-v7a/libassmidi.so'
-        pickFirst 'lib/x86/libassmidi.so'
+    dependencies {
+        implementation fileTree(dir: 'libs', include: ['*.jar'])
+        implementation 'com.android.support:appcompat-v7:28.0.0'
+        implementation 'com.android.support:design:28.0.0'
+        implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+        //rounded ImageView
+        implementation 'com.makeramen:roundedimageview:2.3.0'
+        //fast adapter
+        implementation('com.mikepenz:fastadapter:1.8.2@aar') {
+            transitive = true
+        }
+        //glide
+        implementation 'com.github.bumptech.glide:glide:4.8.0'
+        annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+        //camera view library
+        implementation 'com.otaliastudios:cameraview:1.6.0'
+        //KFilter library
+        implementation 'com.github.isaac-udy:Kfilter:1.1.3'
+        //zomato filter library
+        implementation 'com.github.zomato:androidphotofilters:1.0.1'
+        //gpu imageview filter library
+        implementation 'jp.co.cyberagent.android:gpuimage:2.0.0'
+
+        testImplementation 'junit:junit:4.12'
+        androidTestImplementation 'com.android.support.test:runner:1.0.2'
+        androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     }
-
-}
-
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    //rounded ImageView
-    implementation 'com.makeramen:roundedimageview:2.3.0'
-    //fast adapter
-    implementation('com.mikepenz:fastadapter:1.8.2@aar') {
-        transitive = true
-    }
-    //glide
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    //camera view library
-    implementation 'com.otaliastudios:cameraview:1.6.0'
-    //pisacco
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    //KFilter library
-    implementation 'com.github.isaac-udy:Kfilter:1.1.3'
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
